k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: govambiental-staging
  labels:
    ambiente: staging
