k8s/overlays/staging/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: govambiental-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: "100m"
              memory: "192Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
